# fingerSense

./: .gitignore  .gitmodules  .vimrc  Dockerfile  LICENSE  README.md  docker-compose.yml  listener_node.m  report.20201216.132803.386.0.001.json  report.20201216.132833.24087.0.001.json  report.20201216.132943.24412.0.001.json  report.20201216.133007.25070.0.001.json  report.20201216.133028.25309.0.001.json  structure.drawio
CAD/: direct_finger_mount.SLDPRT  finger_mount.SLDPRT  finger_mount.STL  finger_mount.ipt  finger_mount.stp  finger_sensor.SLDPRT  franka_connector.ipt  franka_connector.stp  lavalier_holder.ipt  lavalier_holder.stp  robot_mount.SLDPRT  robot_mount.STL  sensor_model.STEP  sensor_platform.iam  sensor_platform.stp  sliding_lifter.ipt  sliding_panel.iam  sliding_platform.ipt  sliding_support.ipt
CAD/OldVersions/: finger_mount.0002.ipt  franka_connector.0005.ipt  franka_connector.0019.ipt  franka_connector.0022.ipt  lavalier_holder.0011.ipt  sensor_platform.0005.iam  sliding_lifter.0003.ipt  sliding_platform.0006.ipt  sliding_platform.0011.ipt  sliding_support.0008.ipt  sliding_surface.0001.ipt
Docker/: Dockerfile
Velvet2Wool/: Velvet2Wool_1.0N_0.015mmps_1623776208200147793.npy  Velvet2Wool_2.0N_0.015mmps_1623776329879782586.npy
data/: BeigeCanvas_5.0N_0.01mps_1624987642384704430.npy  BeigeCanvas_5.0N_0.01mps_1624987667614906057.npy  BeigeCanvas_5.0N_0.01mps_1624987688664896145.npy  BeigeCanvas_5.0N_0.01mps_1624987709714762472.npy  BeigeCanvas_5.0N_0.01mps_1624987727784554655.npy  BeigeCanvas_5.0N_0.01mps_1624987745854648656.npy  BeigeCanvas_6.0N_0.01mps_1624987771064730376.npy  BeigeCanvas_6.0N_0.01mps_1624987796274797203.npy  BeigeCanvas_6.0N_0.01mps_1624987817324728390.npy  BeigeCanvas_6.0N_0.01mps_1624987838374627411.npy  BeigeCanvas_6.0N_0.01mps_1624987856444560160.npy  BeigeCanvas_6.0N_0.01mps_1624987874514675439.npy  BeigeCanvas_7.0N_0.01mps_1624987899724698555.npy  BeigeCanvas_7.0N_0.01mps_1624987924934511264.npy  BeigeCanvas_7.0N_0.01mps_1624987945984693782.npy  BeigeCanvas_7.0N_0.01mps_1624987967034866976.npy  BeigeCanvas_7.0N_0.01mps_1624987985104718605.npy  BeigeCanvas_7.0N_0.01mps_1624988003174893466.npy  BeigeCotton_10.0_-0.03.csv  BeigeCotton_10.0_-0.05.csv  BeigeCotton_10.0_-0.06.csv  BeigeCotton_10.0_-0.07.csv  BeigeCotton_10.0_-0.08.csv  BeigeCotton_10.0_-0.1.csv  BeigeCotton_11.0_-0.01.csv  BeigeCotton_11.0_-0.03.csv  BeigeCotton_11.0_-0.06.csv  BeigeCotton_11.0_-0.07.csv  BeigeCotton_11.0_-0.08.csv  BeigeCotton_11.0_-0.09.csv  BeigeCotton_11.0_-0.1.csv  BeigeCotton_12.0_-0.01.csv  BeigeCotton_12.0_-0.02.csv  BeigeCotton_12.0_-0.03.csv  BeigeCotton_12.0_-0.04.csv  BeigeCotton_12.0_-0.05.csv  BeigeCotton_12.0_-0.07.csv  BeigeCotton_12.0_-0.08.csv  BeigeCotton_12.0_-0.09.csv  BeigeCotton_12.0_-0.1.csv  (+2038 more)
data/BlackWool/: BlackWool_1.0N_-0.010mmps_1623758727248539518.npy  BlackWool_1.0N_-0.010mmps_1623758727248539518_0.npy  (+241 more)
docker/: Dockerfile  ros_entrypoint.sh  run.sh  run_container.sh
finger_sense/: package.xml  setup.cfg  setup.py
franka_control/: CMakeLists.txt  package.xml
franka_control/include/franka_control/: Action.h  ControllerInterface.h  FrankaStatePublisher.h  MotionControlServer.h  MotionController.h  NodeStateManager.h  ROS2Interface.h  SlidingControl.h  SlidingControlServer.h  SlidingController.h  SlidingParameterServer.h  TactileListener.h  TactileSubscriber.h  TactileUpdater.h  common.h
franka_control/launch/: control_launch.py
franka_control/src/: Action.cpp  ControllerInterface.cpp  FrankaStatePublisher.cpp  MotionControlServer.cpp  MotionController.cpp  NodeStateManager.cpp  ROS2Interface.cpp  SlidingControl.cpp  SlidingControlServer.cpp  SlidingController.cpp  SlidingParameterServer.cpp  TactileListener.cpp  TactileSubscriber.cpp  TactileUpdater.cpp  action_example.cpp  common.cpp  examples_common.cpp  mafia.cpp  mafia.cpp.ori  motion_with_control.cpp  node_launcher.cpp  offline.cpp  sense_test.cpp
franka_interfaces/: CMakeLists.txt  package.xml
franka_msgs/: CMakeLists.txt  package.xml
maltb/: visualizer.m
matlab/: bot_callback.m  cellebrum.m  cellebrum.m~  listener_node.m  msg_callback.m  msg_callback_fcn.m  tac_callback.m  visualizer.m
offline_learning/: RAE.py  README.md  TacDataset.py  analysis.ipynb  base.py  collate_functions.py  data_base.py  ml_base.py  plot_data.py  plot_tuckerPCA.py  split_data.py  train_net.py  utility.py
preprocess/: README.md  core.csv  factors.npy
ros2_ws/src/franka_control/: CMakeLists.txt  package.xml
ros2_ws/src/franka_control/include/: control_common.h  franka_hw.h
ros2_ws/src/franka_control/include/franka_control_interface/: control_common.h
ros2_ws/src/franka_control/launch/: franka_control_launch.py  franka_launch.py
ros2_ws/src/franka_control/src/: control_common.cc  control_interface.cc  franka_hw.cpp  tactile_sensor_driver.cc
ros2_ws/src/franka_control_interface/: CMakeLists.txt  package.xml
ros2_ws/src/franka_control_interface/include/franka_control_interface/: control_common.h
ros2_ws/src/franka_control_interface/src/: control_common.cc  franka_controller.cc
ros2_ws/src/franka_interface/: CMakeLists.txt  package.xml
ros2_ws/src/franka_interface/launch/: franka_interface_launch.py
ros2_ws/src/franka_interface/src/: robot_state_publisher.cpp  tactile_sensor_driver.cpp
ros2_ws/src/franka_reactive_control/: CMakeLists.txt  package.xml
ros2_ws/src/franka_reactive_control/include/franka_reactive_control/: control_common.h
ros2_ws/src/franka_reactive_control/src/: control_common.cpp  slide_on_surface.cpp
ros2_ws/src/signal_exchange/: CMakeLists.txt  package.xml
ros2_ws/src/signal_exchange/launch/: signal_exchange_launch.py
ros2_ws/src/signal_exchange/src/: .robot_state_publisher.cc.swp  robot_state_publisher.cc  tactile_sensor_driver.cc
ros2_ws/src/tactile_sensor_driver/: CMakeLists.txt  package.xml
ros2_ws/src/tactile_sensor_driver/src/: driver.cpp  tactile_sensor_driver_node.cc
tactile_sensor_driver/: CMakeLists.txt  package.xml
tactile_sensor_driver/src/: driver.cpp
tactile_sensor_msgs/: CMakeLists.txt  package.xml
(+1441 files in other folders)
