<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tactile_sensor_driver</name>
  <version>0.1.0</version>
  <description>CPM-finger tactile sensor driver</description>
  <maintainer email="siao.wang@edu.unige.it">Alexander Wang</maintainer>
  <license>Apache License 2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rmw_fastrtps_cpp</depend>

  <build_depend>tactile_sensor_msgs</build_depend>

  <exec_depend>tactile_sensor_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
